Überarbeitung von text

--- a/Studienarbeit/Dokument/content/02-Grundlagen.tex
+++ b/Studienarbeit/Dokument/content/02-Grundlagen.tex
@@ -3,9 +3,15 @@ In diesem Kapitel werden die Grundlagen von Robotern behandelt. Es wird der zu G
 \section{Bedeutung des Roboter}
 
 \section{Antriebsart des Versuchsroboters} \label{lab:Antriebsart}
-Der Versuchsroboter wird mit zwei unabhängigen Motoren ausgestattet. Diese Motoren treiben jeweils eins der beiden Haupträder an. Zusätzlich erhält der Roboter ein Stützrad, welches durch eine freilaufende Kugel realisiert wurde. Es stützt den Roboter soweit ab, dass dieser nicht nach hinten kippen kann und somit Bauteile auf dem Untergrund schleifen.
+Der Versuchsroboter wird mit zwei unabhängigen Motoren ausgestattet. Diese Motoren treiben jeweils eins der beiden Haupträder an. Die Haupträder sind in der Abbildung \vref{fig:differntial} rot dargestellt. .Zusätzlich erhält der Roboter ein Stützrad, welches durch eine freilaufende Kugel realisiert wurde. Es stützt den Roboter soweit ab, dass dieser nicht nach hinten kippen kann und somit Bauteile auf dem Untergrund schleifen.
+\begin{figure}[htb]
+\centering
+\includegraphics[width= 6cm]{Differentialantrieb}
+\caption{Abstrakte Darstellung der Antriebsräder des Versuchsroboters}
+\label{fig:differntial}
+\end{figure}
 
-Der Antrieb ist in diesem Aufbau ein Differential Antrieb. Mit diesem Antrieb sind sowohl Geradeausfahrten als auch Kurvenfahrten sowie das Drehen auf der Stelle möglich. Sein Hauptvorteil besteht in der einfachen Mechanik die Verbaut wird. Aufgrund seiner zwei unabhängig von einander steuerbaren Räder ist sein Einsatz für dieses Projekt optimal geeignet und sein eigentlicher Nachteil fällt somit nicht weiter auf.
+Der Antrieb in diesem Aufbau ist ein Differential Antrieb wie in Abbildung \vref{fig:differntial} dargestellt. Mit diesem Antrieb sind sowohl Geradeausfahrten als auch Kurvenfahrten sowie das Drehen auf der Stelle möglich. Sein Hauptvorteil besteht in der einfachen Mechanik die Verbaut wird. Aufgrund seiner zwei unabhängig von einander steuerbaren Räder ist sein Einsatz für dieses Projekt optimal geeignet und sein eigentlicher Nachteil fällt somit nicht weiter auf.
  
 Sein Nachteil ist, dass die Räder in Echtzeit geregelt werden müssen.  
 
@@ -45,12 +51,21 @@ Da diese unterschiedlichen Bezeichnungen zu Verwirrung führen kann wird in Fach
 
 \subsection{Anwendung aktueller Assistenzsysteme}
 In den Fahrzeugen, die heute die Fabrikhallen verlassen finden sich inzwischen immer mehr Assistenzsysteme. Diese reichen vom ESP bis hin zum Spurhalteassistent oder dem Automatischen Einparksystemen. Jedoch ruhen sich die Hersteller auf diesen Systemen nicht aus und entwickeln immer umfangreichere Systeme für folgende Fahrzeuggenerationen. 
-\paragraph{Probleme aktueller Systeme} Bei allen Erleichterungen und aller Unterstützung für den Fahrer sollte nicht vergessen werden, dass der Fahrer immer noch selbst am Steuer sitzt und für sein Fahrzeug verantwortlich ist. Bei Testfahrten eines Erlkönigs der Marke BMW kam es am 28. März diesen Jahres zu einem Unfall. Während der Testfahrt, auf der der Fahrer laut dem Hersteller \textbf{„kamerabasierte“ Fahrerassistenzsysteme bei Dunkelheit testen} sollte kam es in Stuttgart zu einem Unfall. In diesen Unfall war ein, mit Sondersignal fahrendes, Polizeiauto verwickelt, welches im Kreuzungsbereich zum Umkippen gebracht wurde.
+\paragraph{Probleme aktueller Systeme} Bei allen Erleichterungen und aller Unterstützung für den Fahrer sollte nicht vergessen werden, dass der Fahrer immer noch selbst am Steuer sitzt und für sein Fahrzeug verantwortlich ist. Bei Testfahrten eines Erlkönigs der Marke BMW kam es am 28. März diesen Jahres zu einem Unfall. Während der Testfahrt, auf der der Fahrer laut dem Hersteller \textbf{„kamerabasierte“ Fahrerassistenzsysteme bei Dunkelheit testen} sollte kam es in Stuttgart zu einem Unfall. In diesen Unfall war ein, mit Sondersignal fahrendes, Polizeiauto verwickelt, welches im Kreuzungsbereich durch den Zusammenstoß umkippte.
 Dieser Unfall zeigt, dass die heutigen Assistenzsysteme schon sehr weit entwickelt sind. Jedoch bedarf es immer noch einem Fahrer, der in Ausnahmesituationen eingreifen kann und einen solchen Unfall verhindert. Weshalb der Fahrer in dieser Situation nicht eingegriffen hat, oder ob es ein Problem mit der Steuerung gab ist nicht bekannt.
 
 Wie dieser Unfall zeigt sind die Assistenzsysteme noch nicht soweit, dass sie alleine, ohne Fahrer, im Straßenverkehr bestehen können. 
 
-\paragraph{Zukunftsweißende Projekte} Jedoch sind die Hersteller inzwischen soweit, dass sie Fahrzeuge im Testbetrieb haben, die ohne Fahrer ihre Runden auf den Rennstrecken dieser Welt drehen können. So stellte AUDI, im Rahmen des letzten DTM-Rennens der Saison 2014, ein Auto vor, welches ohne Fahrer eine Runde im Renntempo über den Hockenheimring fuhr. Die Daten für den Fahrtweg ermittelt es mithilfe von Kameras, die in und um das Fahrzeug verteilt sind. Unterstützt wird es durch weitere Sensoren wie GPS, Raddrehzahlsensor, Gierratensensor und andern Sensoren. Aus diesen Daten errechnet der Computer die Optimale Geschwindigkeit, Bremspunkte und Position auf der Strecke. Bei den Zuschauern kam diese Vorführung gut an. Das Fahrzeug wurde in der Zwischenzeit in mehreren Fernsehsendungen, unter anderem bei GRIP auf RTL II, vorgestellt. 
+\paragraph{Zukunftsweißende Projekte} Jedoch sind die Hersteller inzwischen soweit, dass sie Fahrzeuge im Testbetrieb haben, die ohne Fahrer ihre Runden auf den Rennstrecken dieser Welt drehen können. So stellte AUDI, im Rahmen des letzten DTM-Rennens der Saison 2014, ein Auto (Abbildung\vref{fig:audicar}) vor, welches ohne Fahrer eine Runde im Renntempo über den Hockenheimring fuhr. Die Daten für den Fahrtweg ermittelt es mithilfe von Kameras, die in und um das Fahrzeug verteilt sind. Unterstützt wird es durch weitere Sensoren wie GPS, Raddrehzahlsensor, Gierratensensor und andern Sensoren. Aus diesen Daten errechnet der Computer die Optimale Geschwindigkeit, Bremspunkte und Position auf der Strecke. Bei den Zuschauern kam diese Vorführung gut an. Das Fahrzeug wurde in der Zwischenzeit in mehreren Fernsehsendungen, unter anderem bei GRIP auf RTL II, vorgestellt. 
+\begin{figure}[htb]
+\centering
+\includegraphics[width= 15cm]{audicar}
+\caption{Selbst fahrender AUDI RS7 auf dem Hockenheim 2014 }
+\label{fig:audicar}
+\end{figure}
+\textbf{Quelle Bild: \url{ http://audi-encounter.com/de/img/article-image-main/2015_1_Bobby_Car_Gallery_09.jpg_2130.jpg}}
+
+
 Ein ähnliches Auto hat auch BMW im Fuhrpark. Dieses Fahrzeug wurde in der Sendung TopGear mit Jeremy Clarkson vorgestellt und getestet, jedoch ist dieses Fahrzeug weit weniger bekannt als das von AUDI.
 
 Trotz dem Erfolg dieser Autos auf den Rennstrecken, darf nicht vergessen werden, dass diese Systeme in dieser Konstellation nicht auf öffentlichen Straßen verwendet werden dürfen. Jedoch arbeiten die Hersteller intensiv daran, den Fahrer immer mehr zu entlasten und ihm bei kritischen Situationen zu unterstützen. So werden auch Systeme für den Stop-and-Go Verkehr getestet. Ein solches System soll dem Fahrer entlasten. Es übernimmt innerhalb dieser Fahrsituation gewisse Aufgaben des Fahrers.
