Hinzufügen von Kapitel 5
Einfügen von Kapitel 5 mit Überschriften
Textuelle Einbindung des Bildes Differentialantrieb,PNG

--- a/Studienarbeit/Dokument/Skript.tex
+++ b/Studienarbeit/Dokument/Skript.tex
@@ -30,7 +30,9 @@
 \include{content/04-LejosUndExterneKamera}
 \newpage
 % ==============================================
-
+\include{content/05-Umsetzung}
+\newpage
+% ==============================================
 %\pagenumbering{Roman}
 %\setcounter{page}{5}
 
