--- a/Studienarbeit/Dokument/content/02-Grundlagen.tex
+++ b/Studienarbeit/Dokument/content/02-Grundlagen.tex
@@ -1,9 +1,13 @@
 \chapter{Grundlagen}
 In diesem Kapitel werden die Grundlagen von Robotern behandelt. Es wird der zu Grunde liegende Aufbau des Roboters, im Bezug auf dessen Fortbewegung, vorgestellt. Ebenso werden heutige Fahrassistenzsysteme wie beispielsweise ABS vorgestellt. Zu diesem Kapitel gehört auch eine Übersicht über die Verwendung aktueller Assistenzsysteme.
-\section{Bedeutung des Roboter}
+\section{Bedeutung von Roboter und Assistenzsysteme}
+- Anwendungsbeispiele\\
+Wie wichtig sind se wirklich ?\\
+Weshalb eigener Industriezweig?\\
+Kurze nennung anderer Roboter (Robotino, Toyota Roboter etc.\\
 
 \section{Antriebsart des Versuchsroboters} \label{lab:Antriebsart}
-Der Versuchsroboter wird mit zwei unabhängigen Motoren ausgestattet. Diese Motoren treiben jeweils eins der beiden Haupträder an. Die Haupträder sind in der Abbildung \vref{fig:differntial} rot dargestellt. .Zusätzlich erhält der Roboter ein Stützrad, welches durch eine freilaufende Kugel realisiert wurde. Es stützt den Roboter soweit ab, dass dieser nicht nach hinten kippen kann und somit Bauteile auf dem Untergrund schleifen.
+Der Versuchsroboter wird mit zwei unabhängigen Motoren ausgestattet. Diese Motoren treiben jeweils eins der beiden Haupträder an. Die Haupträder sind in der Abbildung \vref{fig:differntial} rot dargestellt. Zusätzlich erhält der Roboter ein Stützrad, welches durch eine freilaufende Kugel realisiert wurde. In der Abbildung \ref{fig:differntial} wird das Stützrad schwarz dargestellt. Es stützt den Roboter soweit ab, dass dieser nicht nach hinten kippen kann und somit Bauteile auf dem Untergrund schleifen.
 \begin{figure}[htb]
 \centering
 \includegraphics[width= 6cm]{Differentialantrieb}
