Überarbeitung des Textes
Einfügen von Bilder + Textuelle einbindung...

--- a/Studienarbeit/Dokument/content/02-Grundlagen.tex
+++ b/Studienarbeit/Dokument/content/02-Grundlagen.tex
@@ -24,22 +24,31 @@ Sein Nachteil ist, dass die Räder in Echtzeit geregelt werden müssen.
 \section{Assistenzsysteme heutiger Fahrzeuge}
 In der heutigen Zeit unterstützen die Fahrer einige Helfer, auch Assistenzsysteme genannt. Diese Systeme sollen dazu beitragen, den Straßenverkehr sicherer zumachen. Sie entlasten und unterstützen den Fahrer in jeglicher Fahrsituation. So helfen sie beim einparken des Fahrzeugs oder verhindern in Gefahrensituationen den Verlust über die Kontrolle.
 
-Mit dem fortschreiten der Automobilenfortbewegung wurden immer mehr Assistenzsystem erfunden und bestehende immer weiter entwickelt. 
+Im Laufe der Automobilära wurden Assistenzsysteme erfunden und Bestehende weiter entwickelt. 
 \subsection{ABS - Antiblockiersystem}
-Ein Assistenzsystem welches sich in der Automobilbranche flächendeckend durchgesetzt hat, ist das Antiblockiersystem. Es hilft dem Fahrer, das Fahrzeug sicher zum stehen zubringen. Wie der Name schon sagt, versucht es durch gezieltes vermindern des Bremsdrucks ein blockieren des Fahrzeugs zu verhindern. Aufgrund diesen Eingriffs wird der Bremsweg verringert und der Verschleiß an den Laufflächen wird vermindert. Durch dieses System wird die Lenkbarkeit und Spurtreue erhöht.
+Ein Assistenzsystem, welches sich in der Automobilbranche flächendeckend durchgesetzt hat, ist das Antiblockiersystem. Es hilft dem Fahrer, das Fahrzeug sicher zum stehen zubringen. Wie der Name schon sagt, versucht es durch gezieltes vermindern des Bremsdrucks ein blockieren der Räder zu verhindern. Aufgrund diesen Eingriffs wird der Bremsweg verringert und der Verschleiß an den Laufflächen wird vermindert. Durch dieses System wird die Lenkbarkeit und Spurtreue erhöht.
 
 Dieses System ist inzwischen bei jedem großen Automobilhersteller in den Ausstattungslisten der Fahrzeuge. Meist ist es serienmäßig in die Fahrzeuge integriert oder kann für einen geringen Aufpreis nachgeordert werden. 
 
 Antiblockierysteme werden nicht nur bei Autos eingesetzt. Es wird ebenfalls in Flugzeugen Zügen und Motorrädern eingesetzt. 
-Den ersten Einsatz eines solchen Systems fand 1920 in einem Flugzeug statt.
+Den ersten Einsatz eines solchen Systems fand 1920 statt. Jedoch war dies kein Auto sondern ein Flugzeug.
 
 \subsection{PDC - Park Distanz Kontrolle}
-Dieses System unterstützt den Fahrer mit Hilfe akustischen und visuellen Warnhinweisen beim einparken seines Fahrzeugs. 
+Dieses System unterstützt den Fahrer, mit Hilfe akustischen und visuellen Warnhinweisen, beim Einparken seines Fahrzeugs. 
 \paragraph{Funktion}Mit Hilfe von Ultraschallsensoren, welche meist in den Heck-/Frontschürzen untergebracht sind, wird der Abstand zu Gegenständen in einer gewissen Distanz, meist ab 1-2 Meter, gewarnt. 
 
-Diese Warnungen erfolgten bei den ersten Systemen meist akustisch über verschiedene Warntöne. Danach wurden zusätzlich kleine LED-Lampen in verschiedenen Farben eingeführt. Diese leuchten je nach Distanz zum Gegenstand oder Fahrzeug in Grün- Orange/Gelb- Rot. Die nächste Stufe ist eine optische Darstellung des Fahrzeugs auf dem Bildschirm des Infotainmentsystems. Im Bildschirm wird dann der Abstand visuell dargestellt. Zusätzlich dazu, erhält der Fahrer akustische Hinweise. Die neusten Systeme verfügen inzwischen noch über eine Kamera. Mit Hilfe der Kamera erhält der Fahrer beim einparken ein Livebild auf den Bildschirm seines Infotainmentsystems. Zusätzlich dazu wird der Abstand und der bestmögliche Fahrweg visuell im Livebild dargestellt.
+Diese Warnungen erfolgten bei den ersten Systemen meist akustisch über verschiedene Warntöne. Danach wurden zusätzlich kleine LED-Lampen in verschiedenen Farben eingeführt. Diese leuchten je nach Distanz zum Gegenstand oder Fahrzeug in Grün- Orange/Gelb- Rot. Die nächste Stufe ist eine optische Darstellung des Fahrzeugs auf dem Bildschirm des Infotainmentsystems. Im Bildschirm wird dann der Abstand visuell dargestellt. Zusätzlich dazu, erhält der Fahrer akustische Hinweise. 
+
+Die neusten Systeme verfügen inzwischen noch über eine Kamera. Mit Hilfe der Kamera erhält der Fahrer beim einparken ein Livebild auf den Bildschirm seines Infotainmentsystems. In der Abbildung \vref{fig:distanzkontrolle} wird die Darstellung eines solchen Systems im aktuellen 1er BMW gezeigt. Es zeigt ein Livebild der Rückfahrkamera so wie die Aktuellen Abstände in der Headunit an. Bei anderen Herstellern ist es möglich, dass zusätzlich noch der bestmögliche Fahrweg visuell im Livebild dargestellt wird.
+\begin{figure}[htb]
+\centering
+\includegraphics[width= 12cm]{Distanzkontrolle2}
+\caption{Darstellung des Abstandes in der Headuni am beispiel BMW 1er}
+\label{fig:distanzkontrolle}
+\end{figure}
 
 Dieses System und seine Weiterentwicklungen ist die Grundlage für automatische Einparksysteme. 
+\textbf{Quelle: \url{http://www.bmw.com/_common/shared/newvehicles/1series/3door/2012/showroom/comfort/distance_control/distance_control_02.jpg}, Vorlesung Strand,Marcus}
 \subsection{ESC-Electronic Stability Control} 
 \paragraph{Geschichtliches} ESC-Electronic Stability Control ist noch ein Recht junges Assistenzsystem. Im Vergleich zum Antiblockiersystem, welches schon in 20er Jahren des 20.Jahrhunderts entwickelt und bis heute immer weiter entwickelt wurde, führte Mercedes-Benz, mit Hilfe der Bosch AG, dieses Assistenzsystem erst 1995 in der damals neu aufgelegten S-Klasse in die Serienproduktion ein. 
 
